--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -257,7 +257,7 @@
 
 
     <Button
-        android:id="@+id/changepassandname"
+        android:id="@+id/savechanges"
         android:layout_width="260dp"
         android:layout_height="40dp"
 
@@ -267,7 +267,7 @@
         android:layout_marginTop="10dp"
 
 
-        android:text="Change profile details"
+        android:text="SAVE"
         android:textColor="@android:color/white"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -295,12 +295,6 @@
         android:layout_alignParentTop="true"
         android:theme="?attr/actionBarTheme" >
 
-        <ImageButton
-            android:id="@+id/topBarBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
 
         <TextView
             android:id="@+id/topBarTitle"
